Bug 138587 - Using the navigator upsets optimal zoom setting
Summary: Using the navigator upsets optimal zoom setting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.3.1 release
Hardware: x86-64 (AMD64) All
: low minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords:
Depends on:
Blocks: Navigator Writer-View-Jumps
  Show dependency treegraph
 
Reported: 2020-12-01 01:22 UTC by Matt
Modified: 2023-01-26 07:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2020-12-01 01:22:28 UTC
Description:
double-clicking any navigator heading scrolls the view-port left, upsetting the "optimal" zoom setting.

Steps to Reproduce:
1) Set optimal zoom, all text is visible. nice. 
2) Use navigator, double click a heading. Now the view is scrolled left and all text is no longer visible. Not nice.

Actual Results:
Using the navigator scrolls the view left.

Expected Results:
The "optimal" "zoom factor" setting should persist while using the navigator.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.3.1
Build ID: 00(Build:1)
CPU threads: 4; OS: Linux 5.9; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Dieter 2020-12-17 06:59:21 UTC
I confirm it with

Version: 7.0.4.2 (x64)
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Additional informations:
This happens also with tables, but not with images.
Comment 2 Dieter 2022-12-17 12:31:57 UTC
Still happens in

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Shift to the left with
- Headings
- Drawing objects

Shift to the right
- Frames
- Footnotes

Works as expected with
- Tables
- Images
- Bookmarks
- OLE objects
- Sections
- Hyperlinks
- References
- Indexes
- Fields

Jim, any ideas?
Comment 3 Jim Raykowski 2022-12-17 21:26:47 UTC
@Matt and Dieter, Nice attention to detail catch and explanation of what works and doesn't.

I couldn't repro the shift right for Frames and Footnotes. Maybe the document tested with has these in a right to left paragraph?

Effort to fix the issue for Headings and Drawing objects is here:
https://gerrit.libreoffice.org/c/core/+/144392
Comment 4 Commit Notification 2022-12-18 17:05:19 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/51be46640a4987d839aace354ee8b5e85bdce684

tdf#138587 Preserve doc view x position on go to content

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-12-20 09:01:27 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1a12438faeeb74fcb1151e0fd34fcc4c70340c8e

tdf#138587 Preserve doc view x position on go to content

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2023-01-26 07:31:45 UTC
VERIFIED with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1c638b7ac46d8077994c8483e6becc4a33efd12b
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Jim, thank you for fixing it!