tdf#138587 Preserve doc view x position on go to content

from the Writer Navigator.

Change-Id: I55b05be037b4ce010fb0476f584921c7ecae79bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144392
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>